# mgba-splitscreen

./: PROJECT_LOG.md
DualBoy/: TEST_INSTRUCTIONS.md  package-lock.json  package.json
DualBoy/src/: index.html  main.js  styles.css
DualBoy/src-tauri/: Cargo.toml  build.rs  mgba_bindings.h  tauri.conf.json
DualBoy/src-tauri/src/: bindings.rs  emulation.rs  gba.rs  lib.rs  main.rs
